custom/css/style.css
/* ... */
.card input[type=file] {
	opacity: 0;
	overflow: hidden;
	position: absolute;
  width: 0;
}

.card input[type=file] + label {
    display: inline-block;
}

span#file-name {
  font-size: 12px;
  font-weight: 400;
  width: 80px;
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  vertical-align: center;
  margin-left: 4px;
}

.form-group.radio-group {
  display: block !important;
  margin: 16px auto 24px auto !important;
}

.card input[type=radio] {
  display: none;
}

.card input[type="radio"] + label {
  display: inline-block;
  width: 32px;
  height: 32px;
  margin: 0 2px;
  vertical-align: middle;
  cursor: pointer;
  border-radius: 100%;
}

.card input[type="radio"]#brown + label.brown {
  background-color: #3e2723;
}

.card input[type="radio"]#pink + label.pink {
  background-color: #880e4f;
}

.card input[type="radio"]#yellow + label.yellow {
  background-color: #827717;
}

.card input[type="radio"]#green + label.green {
  background-color: #1b5e20;
}

.card input[type="radio"]#blue + label.blue {
  background-color: #292321;
}

.card input[type="radio"]:checked + label {
  border: 4px solid rgba(255,255,255,.5);;
}
/*
----------TABS
*/
.nav-tabs {
  position: fixed;
  width: 100%;
  z-index: 5;
  background-color: #263238;
  border-bottom: 1px solid transparent;
}

.nav-tabs,
.tab-content {
  padding: 0;
}

.tab-content {
  margin-top: 48px;
}

.tab-content h2 {
  text-align: center;
}

.nav-tabs li a,
.nav-tabs li {
  text-align: center;
  float: none;
  display: inline-block;
  width: 50%;
  margin: 0 -1px 0 -1px;
  padding: 6px;
  background-color: #263238;
}

.nav-tabs li a {
  display: block;
  width: 100%;
}


.nav-tabs li.active,
.nav-tabs li:hover {
  background-color: #3B464C;
}

.nav-tabs li a,
.nav-tabs li.active a,
.nav-tabs li.active a:hover,
.nav-tabs li.active a:focus {
  color: #fcfcfc;
  text-align: center;
  margin: 0;
  font-size: 18px;
  text-transform: uppercase;
  border: none;
  background-color: transparent;
}
/*
----------MODAL
*/
.modal {
  transition: all 0s ease-in-out;
}

.modal-content {
  border-radius: 2px;
}

.modal-header {
  border-top: solid 4px #263238;
  border-bottom: none;
}

.modal-header button {
  border-radius: 100%;
  width: 32px;
  height: 32px;
}

.modal-header button:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.modal-header button i {
  padding: 4px;
}

.modal img {
  width: 128px;
  height: 128px;
  border-radius: 100%;
  display: block;
  margin: -16px auto 24px auto;
  -webkit-box-shadow:
  0 2px 2px 0 rgba(0, 0, 0, 0.14),
  0 3px 1px -2px rgba(0, 0, 0, 0.2),
  0 1px 5px 0 rgba(0, 0, 0, 0.12);
          box-shadow:
          0 2px 2px 0 rgba(0, 0, 0, 0.14),
          0 3px 1px -2px rgba(0, 0, 0, 0.2),
          0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

.modal ul {
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0;
}

.modal .social {
  display: table;
	margin: 0 auto;
  padding: 16px;
}

.modal ul li {
  display: inline-block;;
  margin-right: 10px;
  padding: 0;
  margin: 0 16px;
}

.modal .mdi {
  font-size: 32px;
  text-align: center;
}

.modal .mdi-dribbble {
  color: #ea4c89;
}

.modal .mdi-twitter {
  color: #55acee;
}

footer {
  width: 100%;
}

